# rag-framework-comparison

./: README.md  main.py  pyproject.toml  sample.env
charts/: main.py
dataset/: basic_rag_dataset.json  crew_ai_context.json  crewai_dataset.json  crewai_dataset_without_context.json  dspy_dataset.json  haystack_dataset.json  langchain_dataset.json  llama_index_dataset.json  main.py
eval/: constants.py  dataset_evaluation.py  dataset_generation.py  kanidierendencheck.json  main.py  qa_pairs.json  qa_pairs_with_source.json  relevant_q_kanidierendencheck.json  relevant_q_wahlomat.json  updated_qa_pairs.json  wahlomat.json
eval/eval_data/: llama_index_silver_dataset.json  (+6 more)
frameworks/: autogen.py  crewai.py  dspy.py  haystack.py  langchain.py  llama_index.py
ingestion/: loader.py  main.py  metadata.py
performance/: answer_times.json  average_setup_times.json  avg_answer_time.json  individual_setup_times.json  main.py
rag_from_scratch/: main.py
results/: results_basic_rag_dataset.csv  results_crewai_dataset.csv  results_dspy_dataset.csv  results_haystack_dataset.csv  results_langchain_dataset.csv  results_llama_index_dataset.csv  total_results_all.json  total_results_basic_rag_dataset.json  total_results_crewai_dataset.json  total_results_dspy_dataset.json  total_results_haystack_dataset.json  total_results_langchain_dataset.json  total_results_llama_index_dataset.json  variance_total_results_dspy_dataset.json  variance_total_results_haystack_dataset.json  variance_total_results_llama_index_dataset.json
utils/: utils.py
vector_db/: vector_db.py
