[tool.poetry]
name = "rag-framework-comparison"
version = "0.1.0"
description = ""
authors = ["Richard <richard.kruemmel@code.berlin>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
llama-index = "^0.10.51"
qdrant-client = "<1.9.2"
ragas = "^0.1.9"
llama-index-vector-stores-qdrant = "^0.2.10"
python-dotenv = "^1.0.1"
langchain = "^0.2.6"
openai = "^1.35.7"
tiktoken = "^0.7.0"
langchain-qdrant = "^0.1.1"
langchainhub = "^0.1.20"
qdrant-haystack = "^4.0.0"
dspy-ai = {extras = ["qdrant"], version = "^2.4.10"}
seaborn = "^0.13.2"
crewai = {extras = ["tools"], version = "^0.36.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
